syntax = "proto3";

package com.academy.fintech.scoring.application_processing;

option java_multiple_files = true;

service ApplicationProcessingService{
  rpc ProcessApplication(ProcessApplicationRequest) returns (ProcessApplicationResponse);
}

message ProcessApplicationRequest {
  string applicationId = 1;
  string clientId = 2;
  string clientSalary = 3;
  string disbursementAmount = 4;
  string productCode = 5;
  string termInMonths = 6;
  string interest = 7;
}

message ProcessApplicationResponse {
  string status = 1;
}